Add nicer linebreaks

--- a/only-human.tex
+++ b/only-human.tex
@@ -16,24 +16,39 @@
 
 \renewcommand{\cellalign}{l}
 
-\title{\vspace{-4ex}ONLY HUMAN 0.3.2\vspace{-6.5ex}}
+\title{\vspace{-4ex}ONLY HUMAN 0.3.3\vspace{-6.5ex}}
 \date{}
 
 \begin{document}\begin{multicols}{3}
   \maketitle
 
-  A simple tabletop RPG framework, for when you don't want superhuman characters. It requires a game master (GM) to run the world / non-player characters (NPCs), and at least $1$ player to run the player character(s) (PCs).
+  A simple tabletop RPG framework, for when you don't want superhuman
+  characters. It requires a game master (GM) to run the world / non-player
+  characters (NPCs), and at least $1$ player to run the player character(s)
+  (PCs).
 
-  To play, everyone should have d20s ($20$ sided dice), paper, pencils, and erases to record character details and notes. The GM should have a story, and details of relevant items, roles, and mechanics they want in the game (see the Still Human section for some examples).
+  To play, everyone should have d20s ($20$ sided dice), as well as paper,
+  pencils, and erasers to record character details and notes. The GM should have
+  a story, and details of relevant items, roles, and mechanics they want in the
+  game (see the Still Human section for some examples).
   \section*{CORE RULES}
 
   \subsection*{Character Creation}
 
-  Before the game, the players each create a character. To do so, they allocate $12$ points between four \textbf{stats}: Dexterity (DEX), Intelligence (INT), Strength (STR), and Will (WIL). Each \textbf{stat} may not be allocated more than $6$ points.
+  Before the game, the players each create a character. To do so, they allocate
+  $12$ points between four \textbf{stats}: Dexterity (DEX), Intelligence (INT),
+  Strength (STR), and Will (WIL). Each \textbf{stat} may not be allocated more
+  than $6$ points.
 
-  Players also allocate $16$ points to \textbf{skills}. The GM may provide the option to pick a \textbf{role}, which confers an additional $4$ points that must be allocated within a particular set of \textbf{skills}. No skill can be allocated more than $4$ points.
+  Players also allocate $16$ points to \textbf{skills}. The GM may provide the
+  option to pick a \textbf{role}, which confers an additional $4$ points that
+  must be allocated within a particular set of \textbf{skills}. No skill can be
+  allocated more than $4$ points.
 
-  Each \textbf{skill} is associated with two \textbf{stats}. Below are some \textbf{skills}, but you can add other \textbf{skills} to the game, with the agreement of the GM and after associating the \textbf{skill} with a pair of \textbf{stats}.
+  Each \textbf{skill} is associated with two \textbf{stats}. Below are some
+  \textbf{skills}, but you can add other \textbf{skills} to the game, with the
+  agreement of the GM and after associating the \textbf{skill} with a pair of
+  \textbf{stats}.
 
   \begin{multicols}{2}
     DEX + DEX: ​\textit{Agility​},​ \textit{Sleight of hand}
@@ -57,56 +72,116 @@
     SPT + SPT: ​\textit{Persuasion}
   \end{multicols}
 
-  Keep in mind that couple of numbers should not totally describe your character. Think about their personality, about what they want, what they need (but might not know they need), and how they know the other characters in the group. Have secrets for your character, but want them to be discovered.
+  Keep in mind that couple of numbers should not totally describe your
+  character. Think about their personality, about what they want, what they need
+  (but might not know they need), and how they know the other characters in the
+  group. Have secrets for your character, but want them to be discovered.
 
   \subsection*{Tests}
 
-  When a character tries something with a chance of both failure and success, the GM may have them take a \textbf{​test}​ in a \textbf{skill}: their controlling player (or the GM for NPCs) rolls a d20, adds the character's \textbf{modifier} in the \textbf{skill}, and the GM compares that to a \textbf{difficulty} they have set. If the \textbf{test} result is at least the \textbf{difficulty} then the \textbf{test} is a success, otherwise it is a failure.
+  When a character tries something with chance of both success and meaningful
+  failure, the GM may have them take a \textbf{​test}​ in a \textbf{skill}: their
+  controlling player (the GM for NPCs) rolls a d20, adds their \textbf{modifier}
+  in the \textbf{skill}, and the GM compares that to a \textbf{difficulty} they
+  have set. If the \textbf{test} result is at least the \textbf{difficulty} then
+  the \textbf{test} is a success, otherwise it is a failure.
 
-  To find the character's \textbf{skill} \textbf{modifier} add together their points in the associated \textbf{stats} and divide this by $2$ rounding down (this is just the \textbf{stat's} points for \textbf{skills} associated with the same \textbf{stat} twice) then add their points in the \textbf{skill}. References to a \textbf{skill} in a numerical context refer to this \textbf{modifier}.
+  To find the character's \textbf{skill} \textbf{modifier} add together their
+  points in the associated \textbf{stats} and divide this by $2$ rounding down
+  (this is just the \textbf{stat's} points for \textbf{skills} associated with
+  the same \textbf{stat} twice) then add their points in the \textbf{skill}.
+  References to a \textbf{skill} in a numerical context refer to this
+  \textbf{modifier}.
 
   \subsection*{Contests}
 
-  \textbf{Contests} are special kinds of \textbf{tests} for when two or more characters are simultaneously attempting tasks that come into conflict. Each character takes a \textbf{test} in the \textbf{skill} relevant to the task they are attempting. The character with the highest result succeeds, and the other character(s) fail (perhaps to varying degrees). The GM adjudicates the outcome of any ties.
+  \textbf{Contests} are special kinds of \textbf{tests} for when two or more
+  characters are simultaneously attempting tasks that come into conflict. Each
+  character takes a \textbf{test} in the \textbf{skill} relevant to the task
+  they are attempting. The character with the highest result succeeds, and the
+  other character(s) fail (perhaps to varying degrees). The GM adjudicates the
+  outcome of any ties.
 
   \subsection*{Turns}
 
-  When things get tense characters start taking turns. The turn order, and whether or not they overlap, is up to the GM. Everyone taking a turn represents about 10 seconds of time. During a turn, characters may move, and once per turn (possibly during that movement) they may take an ​\textbf{action​}. Characters may also talk at any point during turns, but players shouldn't communicate in-character more than is reasonable for the elapsed time.
+  When things get tense characters start taking turns. The turn order, and
+  whether or not they overlap, is up to the GM. Everyone taking a turn
+  represents about 10 seconds of time. During a turn, characters may move, and
+  once per turn (possibly during that movement) they may take an 
+  \textbf{action​}. Characters may also talk at any point during turns, but
+  players shouldn't communicate in-character more than is reasonable for the
+  elapsed time.
   
-  \textbf{Attacking}, \textbf{running}, \textbf{readying}, some object interactions, or trying to \textbf{stabalise} a character are all actions. As is anything else the GM deems to be.
+  \textbf{Attacking}, \textbf{running}, \textbf{readying}, some object
+  interactions, or trying to \textbf{stabalise} a character are all actions. As
+  is anything else the GM deems to be.
   
 
   \subsection*{Moving}
 
-  When characters move, they can move in a path of up to $10 + (2 \times Speed)$ metres. If a character is climbing, swimming, sneaking, carrying something bulky, moving over difficult ground, or otherwise slowed, then they are \textbf{restricted}. The distance a character moves whilst \textbf{restricted} counts twice against their movement.
+  When characters move in their turn, they can move in a path of up to
+  $10 + (2 \times Speed)$ metres. If a character is climbing, swimming,
+  sneaking, carrying something bulky, moving over difficult ground, or otherwise
+  slowed, then they are \textbf{restricted}. The distance a character moves
+  whilst \textbf{restricted} counts twice against their movement.
 
   \subsection*{Actions}
 
-  To \textbf{attack}, a character must know where they are attacking (if there is no target there the attack fails), be within their weapon's range of their target, and have nothing fully blocking their \textbf{attack}. The attacker then makes the relevant of either a \textit{​Ranged attacking​} or a \textit{​Melee attacking​​}  \textbf{test​}, adding their weapon's modifier. The \textbf{difficulty} for this ​\textbf{test​} is $10 + target\:DEX$. Increase the \textbf{difficulty} by $2$ for ranged attacks on targets within $2$ metres, and by $4$ if the attacker can see less than half of the target.
+  To \textbf{attack}, a character must know where they are attacking (if there
+  is no target there the attack fails), be within their weapon's range of their
+  target, and have nothing fully blocking their \textbf{attack}. The attacker
+  then makes the relevant of either a \textit{​Ranged attacking​} or a
+  \textit{​Melee attacking​​}  \textbf{test​}, adding their weapon's modifier. The
+  \textbf{difficulty} for this ​\textbf{test​} is $10 + target\:DEX$. Increase the
+  \textbf{difficulty} by $2$ for ranged attacks on targets within $2$ metres,
+  and by $4$ if the attacker can see less than half of the target.
 
-  If the attacker fails, nothing happens. Otherwise, the attack has an \textbf{impact} of the amount the \textbf{test} \textbf{difficulty} was exceeded by, minus the absorption of any armour the target is wearing. The target then takes a \textbf{difficulty} $15 + impact$ \textit{Toughness} \textbf{test}. If they fail they get \textbf{injured} and become \textbf{unstable}. If they fail by $10$ to $14$ they get \textbf{injured} twice, if they fail by $15$ or more they get \textbf{injured} three times.
+  If the attacker fails, nothing happens. Otherwise, the attack has an
+  \textbf{impact} of the amount the \textbf{test} \textbf{difficulty} was
+  exceeded by, minus the absorption of any armour the target is wearing. The
+  target then takes a \textbf{difficulty} $15 + impact$ \textit{Toughness}
+  \textbf{test}. If they fail they get \textbf{injured} and become
+  \textbf{unstable}. If they fail by $10$ to $14$ they get \textbf{injured}
+  twice, if they fail by $15$ or more they get \textbf{injured} three times.
 
-  If a character \textbf{runs} they double the distance they are permitted to move in the current turn. If a character \textbf{readies} their player must specify a condition and an \textbf{action}. If the condition occurs before their next turn, their character immediately takes the action.
+  If a character \textbf{runs} they double the distance they are permitted to
+  move in the current turn. If a character \textbf{readies} their player must
+  specify a condition and an \textbf{action}. If the condition occurs before
+  their next turn, their character immediately takes the action.
 
   \subsection*{Injury}
 
-  Characters have a \textbf{health state} and are either \textbf{stable} or \textbf{unstable}. If a character gets \textbf{injured} they drop to the next \textbf{health state} down the table. If they are \textbf{unstable} in the same \textbf{health state} for more than $30$ minutes, their player rolls d20. On an $11$ or higher they become \textbf{stable}, on a $10$ or lower they get \textbf{injured}. A successful \textbf{difficulty} $11$ \textit{Medicine} \textbf{test} will \textbf{stabilise} a character, but true recovery can require days or specialised equipment.
+  Characters have a \textbf{health state} and are either \textbf{stable} or
+  \textbf{unstable}. If a character gets \textbf{injured} they drop to the next
+  \textbf{health state} down the table. If they are \textbf{unstable} in the
+  same \textbf{health state} for more than $30$ minutes, their player rolls a
+  d20. On an $11$ or higher they become \textbf{stable}, on a $10$ or lower they
+  get \textbf{injured}. A successful \textbf{difficulty} $11$ \textit{Medicine}
+  \textbf{test} will \textbf{stabilise} a character, but true recovery can
+  require days or specialised equipment.
 
   \begin{tabularx}{\linewidth}{lX}
     Health State & Effect on Character \\
     \hline
     Normal & They're fine. Characters start in this state, \textbf{stable}. \\
     Wounded & They're hurt, they suffer a $-2$ penalty to all \textbf{tests}. \\
-    Seriously Wounded & They're \textit{really} hurt, they suffer a $-4$ penalty to all \textbf{tests} and are \textbf{restricted}. \\
-    Incapacitated & They're (effectively) unconscious. They cannot voluntarily do anything. You do not add their DEX to the \textbf{difficulty} of \textbf{tests} to attack them. \\
+    Seriously Wounded & They're \textit{really} hurt, they suffer a $-4$ penalty
+      to all \textbf{tests} and are \textbf{restricted}. \\
+    Incapacitated & They're (effectively) unconscious. They cannot voluntarily
+      do anything. You do not add their DEX to the \textbf{difficulty} of
+      \textbf{tests} to attack them. \\
     Dead & They're dead, Jim.
   \end{tabularx}
 
   \section*{STILL HUMAN}
 
-  Still Human is a sci-fi implementation of the ONLY HUMAN framework, that is, it provides \textbf{roles}, statistics for items, and a hint of a setting. Other implementations should be possible, but they are up to you to create.
+  Still Human is a sci-fi implementation of the ONLY HUMAN framework, that is,
+  it provides \textbf{roles}, statistics for items, and a hint of a setting.
+  Other implementations should be possible, but they are up to you to create.
 
-  Still Human is designed to run games for teams of highly trained or experienced characters that are sent on, or somehow end up entangled in, various space-related missions in reasonably hard sci-fi near-ish future settings.
+  Still Human is designed to run games for teams of characters that are sent on,
+  or somehow end up entangled in, various space-related missions in reasonably
+  hard sci-fi near-ish future settings.
 
   \subsection*{Equipment}
 
@@ -114,10 +189,17 @@
     Armour (Absorption) & Description / Effects \\
     \hline
     Normal Clothes (0) & Stylish \textit{and} practical. \\
-    Space Suit (2) & A surprisingly compact vacuum rated environmental suit. Two hot-swappable tanks (that passively re-fill in atmosphere) provide one hour of oxygen each. If the suit absorbs any damage it is torn, and must be repaired before it will be vacuum worthy. A character wearing a space suit is \textbf{restricted}. \\
-    Reinforced Space Suit (3) & A military grade space suit. The same as a space suit, except it is only torn if its wearer is hit with an attack that results in an \textbf{impact} greater than $0$. \\
+    Space Suit (2) & A surprisingly compact vacuum rated environmental suit. Two
+      hot-swappable tanks (that passively re-fill in atmosphere) provide one
+      hour of oxygen each. If the suit absorbs any damage it is torn, and must
+      be repaired before it will be vacuum worthy. A character wearing a space
+      suit is \textbf{restricted}. \\
+    Reinforced Space Suit (3) & A military grade space suit. The same as a space
+      suit, except it is only torn if its wearer is hit with an attack that
+      results in an \textbf{impact} greater than $0$. \\
     Combat Armour (3) & Tactical body armour. \\
-    Combat Carapace (4) & Heavy duty body armour. A character wearing combat carapace is \textbf{restricted}.
+    Combat Carapace (4) & Heavy duty body armour. A character wearing combat 
+      carapace is \textbf{restricted}.
   \end{tabularx}
 
   \begin{tabularx}{\linewidth}{lXX}
@@ -135,13 +217,36 @@
   \begin{tabularx}{\linewidth}{lX}
     Other Items & Description / Effects \\
     \hline
-    \makecell[t]{Short Range\\Communicator} & A small radio device. Provides encrypted communication with selected short range communicators configured to receive it within $20km$. \\
-    \makecell[t]{Long Range\\Communicator} & A backpack sized radio device that provides encrypted communication to selected equipment configured to receive it within $40,000km$. \\
+    \makecell[t]{Short Range\\Communicator} & A small radio device. Provides
+      encrypted communication with selected short range communicators configured
+      to receive it within $20km$. \\
+    \makecell[t]{Long Range\\Communicator} & A backpack sized radio device that
+      provides encrypted communication to selected equipment configured to
+      receive it within $40,000km$. \\
     Pad & A smartphone sized, portable, touch screen computer. \\
-    Navigator & A small attachment to a pad that uses known maps, available satellite data, and computer vision to attempt to inform the user of their position at all times. \\
-    Scanner & A small attachment to a pad that allows various kinds of scanning. Where relevant, a scanner gives a $+2$ modifier to \textit{Investigation} \textbf{tests}. \\
-    Medical Kit & A brief-case sized box containing various medical supplies. Where relevant, a medical kit gives a $+2$ modifier to \textit{Medicine} \textbf{tests}. Additionally, the medical kit contains $5$ stim-shots, that can be used to rouse an unconscious character to the seriously wounded \textbf{health state}, and a defibrillator that can be used to revive a dead character to the seriously wounded \textbf{health state} if they died in the last minute from causes that would be resolved by restarting their heart. The defibrillator has $5$ uses per charge. Use of both the stim-shots and the defibrillator require a successful \textbf{stabilisation} \textbf{action}, if the \textbf{test} is failed they are still used, but have no effect. \\
-    Engineering Kit & A vacuum rated toolbox full of various equipment for dealing with the tech a space-faring engineer might expect to encounter. Where relevant, an engineering kit gives a $+2$ modifier to \textit{Technology} \textbf{tests}. Additionally, the engineering kit contains $5$ patches that can, as an \textbf{action}, be used to repair tears in space suits.
+    Navigator & A small attachment to a pad that uses known maps, available 
+      satellite data, and computer vision to attempt to inform the user of their
+      position at all times. \\
+    Scanner & A small attachment to a pad that allows various kinds of scanning.
+      Where relevant, a scanner gives a $+2$ modifier to \textit{Investigation}
+      \textbf{tests}. \\
+    Medical Kit & A brief-case sized box containing various medical supplies.
+      Where relevant, a medical kit gives a $+2$ modifier to \textit{Medicine}
+      \textbf{tests}. Additionally, the medical kit contains $5$ stim-shots,
+      that can be used to rouse an unconscious character to the seriously
+      wounded \textbf{health state}, and a defibrillator that can be used to
+      revive a dead character to the seriously wounded \textbf{health state} if
+      they died in the last minute from causes that would be resolved by
+      restarting their heart. The defibrillator has $5$ uses per charge. Use of
+      both the stim-shots and the defibrillator require a successful
+      \textbf{stabilisation} \textbf{action}, if the \textbf{test} is failed
+      they are still used, but have no effect. \\
+    Engineering Kit & A vacuum rated toolbox full of various equipment for
+      dealing with the tech a space-faring engineer might expect to encounter.
+      Where relevant, an engineering kit gives a $+2$ modifier to
+      \textit{Technology} \textbf{tests}. Additionally, the engineering kit
+      contains $5$ patches that can, as an \textbf{action}, be used to repair
+      tears in space suits.
   \end{tabularx}
 
   \vfill\null
@@ -149,28 +254,54 @@
 
   \subsection*{Roles}
 
-  In addition to the benefits of \textbf{roles} outlined in the character creation section of the basic rules, with the agreement of the GM a character that selects one of the following roles may also take the corresponding piece(s) of equipment, and all characters may take Normal Clothes, a Space Suit, a Short Range Communicator, a Pad, and their choice of either a combat knife or an Auto Pistol.
+  In addition to the benefits of \textbf{roles} outlined in the character
+  creation section of the basic rules, with the agreement of the GM a character
+  that selects one of the following roles may also take the corresponding
+  piece(s) of equipment, and all characters may take Normal Clothes, a Space
+  Suit, a Short Range Communicator, a Pad, and their choice of either a combat
+  knife or an Auto Pistol.
 
-  Still Human also adds the \textit{Piloting} \textbf{skill} to a game. It is a DEX + INT \textbf{skill}, and is used in one of the following roles.
+  Still Human also adds the \textit{Piloting} \textbf{skill} to a game. It is a
+  DEX + INT \textbf{skill}, and is used in one of the following roles.
 
   \begin{tabularx}{\linewidth}{lXX}
     Role & Proficiencies & Equipment \\
     \hline
     Pilot & \textit{Piloting} and \textit{Investigation} & Navigator \\
-    Communications & \textit{Technology}, \textit{Insight} and \textit{Persuasion} & Long Range Communicator \\
-    Security & \textit{Ranged attacking}, \textit{Melee attacking}, and \textit{Toughness} & Reinforced Space Suit, Assault Rifle, and Shock Rod \\
-    Engineering & \textit{Slight of hand}, \textit{Piloting} and \textit{Technology} & Engineering Kit \\
-    Medical & \textit{Slight of hand} and \textit{Medicine} & Medical Kit \\
-    Science & \textit{Technology} and \textit{Investigation} & Scanner
+    Communications
+      & \textit{Technology}, \textit{Insight} and \textit{Persuasion}
+      & Long Range Communicator \\
+    Security
+      & \textit{Ranged attacking}, \textit{Melee attacking}, and
+        \textit{Toughness}
+      & Reinforced Space Suit, Assault Rifle, and Shock Rod \\
+    Engineering
+      & \textit{Slight of hand}, \textit{Piloting} and \textit{Technology}
+      & Engineering Kit \\
+    Medical
+      & \textit{Slight of hand} and \textit{Medicine}
+      & Medical Kit \\
+    Science
+      & \textit{Technology} and \textit{Investigation}
+      & Scanner
   \end{tabularx}
 
   \subsection*{Requirements and Requisitioning}
 
-  An alternative to roles is to come up with a list of required proficiencies for the group, e.g. "We need people experienced in piloting and investigation, and someone trained in both technology and slight of hand", and let the group work out how they will fill those niches together. Similarly, a pool of equipment can be provided, for the group to share out. This could lead to relations forming between the characters whilst they are being created.
+  An alternative to roles is to come up with a list of required proficiencies
+  for the group, e.g. "We need people experienced in piloting and investigation,
+  and someone trained in both technology and slight of hand", and let the group
+  work out how they will fill those niches together. Similarly, a pool of
+  equipment can be provided, for the group to share out. This could lead to
+  relations forming between the characters whilst they are being created.
 
   \section*{GM TIPS}
 
-  ONLY HUMAN is rather rules light. This is quite intentional, and is based on the idea that the fundamental core of an RPG is incredibly simple, and can benefit from being more exposed for GMs to tinker with. However, this power does also come with responsibility. Hence, this sections exists to provide various tips to try to help GMs out.
+  ONLY HUMAN is rather rules light. This is quite intentional, and is based on
+  the idea that the fundamental core of an RPG is incredibly simple, and can
+  benefit from being more exposed for GMs to tinker with. However, this power
+  does also come with responsibility. Hence, this sections exists to provide
+  various tips to try to help GMs out.
 
   \subsection*{Setting DCs}
 
@@ -189,42 +320,99 @@
     \end{tabular}
   \end{center}
 
-  Unless you are intentionally trying to hide the difficulty of a task, if a character attempts a task that is impossible to fail, or impossible to successfully complete, there is no need for a \textbf{test}, simply narrate the outcome to the players.
+  Unless you are intentionally trying to hide the difficulty of a task, if a
+  character attempts something that is impossible to fail, impossible to
+  successfully complete, or for which there is no meaningful cost to failure
+  (the character can and would try again until they succeed), then there is no
+  need for a \textbf{test}, simply narrate the outcome to the players.
 
   \subsection*{Turns}
 
-  ONLY HUMAN does not prescribe a method for determining the order of turns, whether there even is an order to turns, or whether or not turns can overlap. This should generally be decided on a case by cases basis, as there is no one system that is good for every situation. The order could be determined by \textit{Speed} \textbf{contests}, it could just evolve from the scene, characters could be divided into teams that alternate, or perhaps everyone could go at once. The characters can be sequenced through any method you like.
+  ONLY HUMAN does not prescribe a method for determining the order of turns,
+  whether there even is an order to turns, or whether or not turns can overlap.
+  This should generally be decided on a case by cases basis, as there is no one
+  system that is good for every situation. The order could be determined by
+  \textit{Speed} \textbf{contests}, it could just evolve from the scene,
+  characters could be divided into teams that alternate, or perhaps everyone
+  could go at once. The characters can be sequenced through any method you like.
 
   \subsection*{Adding to the Game}
 
-  You should feel totally free to add items or rules to the game, it is intentionally simple for that reason. Keep in mind that it is expected for specific rules to override general rules, so don't be afraid of that. Perhaps you want a gun that fires so fast it's wielder effectively shoots twice, or an enemy that can take a lot more hits than a usual character. Don't worry if these things go against the general stuff in the core rules, GMing would be much less fun if the players knew how everything worked. This sections details some example additions.
+  You should feel totally free to add items or rules to the game, it is
+  intentionally simple for that reason. Keep in mind that it is expected for
+  specific rules to override general rules, so don't be afraid of that. Perhaps
+  you want a gun that fires so fast it's wielder effectively shoots twice, or an
+  enemy that can take a lot more hits than a usual character. Don't worry if
+  these things go against the general stuff in the core rules, GMing would be
+  much less fun if the players knew how everything worked. This sections details
+  some example additions.
 
-  Adding equipment and roles (to effectively create your own implementation of ONLY HUMAN) is another great way to extend the game. Consider adding items or features that vary in more ways than the basic rules allow, such as a shotgun that can hit everything in a cone up to $10$ metres with a $+4$ or one target with a $+1$ out to $30$ metres.
+  Adding equipment and roles (to effectively create your own implementation of
+  ONLY HUMAN) is another great way to extend the game. Consider adding items or
+  features that vary in more ways than the basic rules allow, such as a shotgun
+  that can hit everything in a cone up to $10$ metres with a $+4$ or one target
+  with a $+1$ out to $30$ metres.
 
   \subsection*{Antagonists and Enemies}
 
-  When creating antagonists or enemies do not feel you need to stick to the options available to the player. You may want grunt alien enemies that drop dead on a single \textit{Toughness} \textbf{test} failure, or a villain antagonist so drugged up on stimulants that they are much harder to take down. You may want characters that have better or worse stats than the standard player character creation allows. Go for it.
+  When creating antagonists or enemies do not feel you need to stick to the
+  options available to the player. You may want grunt alien enemies that drop
+  dead on a single \textit{Toughness} \textbf{test} failure, or a villain
+  antagonist so drugged up on stimulants that they are much harder to take down.
+  You may want characters that have better or worse stats than the standard
+  player character creation allows. Go for it.
 
   \subsection*{Character Equipment}
 
-  Whilst there is no strict limit on how much equipment a character can carry, it is best to be realistic. If you think a PC is carrying too much, perhaps get the player to label where everything is on their character's body. You could also apply strict carry weight limits, such as $40 + 10 \times Athletics$ kilograms of equipment. If you wanted to be even more granular you could specify that a character carrying more than $40 + 5 \times Athletics$ is \textbf{restricted}.
+  Whilst there is no strict limit on how much equipment a character can carry,
+  it is best to be realistic. If you think a PC is carrying too much, perhaps
+  get the player to label where everything is on their character's body. You
+  could also apply strict carry weight limits, such as $40 + 10 \times
+  Athletics$ kilograms of equipment. If you wanted to be even more granular you
+  could specify that a character carrying more than $40 + 5 \times Athletics$
+  is \textbf{restricted}.
 
   \subsection*{Adjudicating Complex Tasks}
 
-  ONLY HUMAN does not provide specific rules for adjudicating everything a player may wish to try. So, when dealing with non-standard tasks, attempt to find a way to distil them down into one or more core difficulties (parts of the task with a risk of failure and a chance of success) that can be related to \textbf{skills} (whether on the given \textbf{skills} table or not).
+  ONLY HUMAN does not provide specific rules for adjudicating everything a
+  player may wish to try. So, when dealing with non-standard tasks, attempt to
+  find a way to distil them down into one or more core difficulties (parts of
+  the task with a risk of meaningful failure and a chance of success) that can
+  be related to \textbf{skills} (whether on the given \textbf{skills} table or
+  not).
 
-  Once you know what \textbf{skills} are involved, try to gauge the difficulty of these components of the task, work out if they happen in an order or at the same time, and work out what success or failure for individual parts or combinations of individual parts looks like. Finally, with these ideas in mind, have the character take \textbf{tests} based on the established skills and difficulties, in the established order, and provide the established outcomes.
+  Once you know what \textbf{skills} are involved, try to gauge the difficulty
+  of these components of the task, work out if they happen in an order or at the
+  same time, and work out what success or failure for individual parts or
+  combinations of individual parts looks like. Finally, with these ideas in
+  mind, have the character take \textbf{tests} based on the established skills
+  and difficulties, in the established order, and provide the established
+  outcomes.
 
-  In practice, this does not need to be dealt with remotely as formally every time, but that structure forms guidelines for one way to react to players attempting complicated tasks.
+  In practice, this does not need to be dealt with remotely as formally every
+  time, but that structure forms guidelines for one way to react to players
+  attempting complicated tasks.
 
   \subsection*{Contests}
 
-  Be creative with your use of \textbf{contests}, they are not just for arm wrestles. Perhaps one character searching for another could be represented by a \textit{Investigation}/\textit{Stealth} \textbf{contest}, or one character trying to stop another from twisting out of their grip could be an \textit{Athletics}/\textit{Agility} \textbf{contest}.
+  Be creative with your use of \textbf{contests}, they are not just for arm
+  wrestles. Perhaps one character searching for another could be represented by
+  a \textit{Investigation}/\textit{Stealth} \textbf{contest}, or one character
+  trying to stop another from twisting out of their grip could be an
+  \textit{Athletics}/\textit{Agility} \textbf{contest}.
 
   \subsection*{Progression}
 
-  It is possible to implement a rudimentary progression system in ONLY HUMAN. The simplest way would be to give players more points to allocate to \textbf{stats} and \textbf{skills}, and perhaps raising the cap on the maximum allocatable to each. If you plan on doing this, consider starting the characters initially with fewer points than the character creation section suggests, as increasing the available points too far beyond this point could leave min-maxed characters with very large \textbf{modifiers}.
+  It is possible to implement a rudimentary progression system in ONLY HUMAN.
+  The simplest way would be to give players more points to allocate to
+  \textbf{stats} and \textbf{skills}, and perhaps raising the cap on the maximum
+  allocatable to each. If you plan on doing this, consider starting the 
+characters initially with fewer points than the character creation section
+suggests, as increasing the available points too far beyond this point could
+leave min-maxed characters with very large \textbf{modifiers}.
 
-  Another simple progression mechanism, that is perhaps more inline with the ethos of ONLY HUMAN, would be to provide players with better equipment, and better connections in the setting of the game.
+  Another simple progression mechanism, that is perhaps more inline with the
+  ethos of ONLY HUMAN, would be to provide players with better equipment, and
+  better connections in the setting of the game.
 
 \end{multicols}\end{document}
