Replace the remaining SPTs with WIL

--- a/only-human.tex
+++ b/only-human.tex
@@ -57,19 +57,19 @@
 
     DEX + STR: ​\textit{Speed}
 
-    DEX + SPT: ​\textit{Stealth}
+    DEX + WIL: ​\textit{Stealth}
 
     INT + INT: ​\textit{Technology​},​ \textit{Medicine}
 
     INT + STR: ​\textit{Melee attacking}
 
-    INT + SPT: \textit{Investigation}, \textit{Insight}
+    INT + WIL: \textit{Investigation}, \textit{Insight}
 
     STR + STR: \textit{​Athletics}
 
-    STR + SPT: \textit{​Toughness}, \textit{Intimidation}
+    STR + WIL: \textit{​Toughness}, \textit{Intimidation}
 
-    SPT + SPT: ​\textit{Persuasion}
+    WIL + WIL: ​\textit{Persuasion}
   \end{multicols}
 
   Keep in mind that couple of numbers should not totally describe your
